--- a/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1.csproj
@@ -73,6 +73,9 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>C:\Users\longjie\Downloads\Bin\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -86,6 +89,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassFn.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
